==================
Unreleased Changes
==================

This file collects *unreleased* changes only.

For release notes, see:

  https://crate.io/docs/reference/en/latest/release_notes/index.html

For developers: changes should be recorded here (using RST syntax) as you are
developing CrateDB. When a new release is being cut, changes will be moved to
the appropriate section of the docs.

Breaking Changes
================

Changes
=======

Fixes
=====

 - Fix: `sys.snapshot` queries hung instead of throwing an error if something
   went wrong.

 - Fixed an issue with `regexp_replace`: In some cases it used the third
   argument as flags parameter instead of the fourth argument.

 - Fixed an issue which lead to brief unavailability of already registered
   functions after a function was created or dropped in the same schema.

 - Improved error message when trying to update an element of an array. 

 - Fixed a regression that lead to `ArrayIndexOutOfBoundsException` if a JOIN
   query was made with a WHERE clause on partitioned columns.

 - Fixed a NullPointerException which could occur if an attempt was made to use
   `match` on two different relations within an explicit join condition.
   This now raises a proper error stating that it's not supported.

 - Wrong results were returned from queries with more than one level
   of nested subselects.

 - ``ORDER BY`` on joins caused incorrect order of values when having multiple
   non-distinct values on the left part of the join. Now ``ORDER BY`` is
   correctly applied.

 - Fix: Appearance of NPE during startup of crate

 - Fix: Log4j would yield a "No log4j2 configuration file found" error when
   shutting down crate ungracefully (via kill signal)

 - Fix: Restoring empty partitioned tables wasn't possible